chore: update git settings to disable sync confirmation

--- a/settings.json
+++ b/settings.json
@@ -59,5 +59,6 @@
   "git.openRepositoryInParentFolders": "never",
   "files.exclude": {
     "**/.git": false
-  }
+  },
+  "git.confirmSync": false
 }
