--- a/config/.config/Code/User/settings.json
+++ b/config/.config/Code/User/settings.json
@@ -60,5 +60,6 @@
     "**/.git": false
   },
   "git.confirmSync": false,
-  "github.copilot.editor.enableAutoCompletions": true
+  "github.copilot.editor.enableAutoCompletions": true,
+  "ansible.validation.lint.enabled": false
 }
