--- a/local.yml
+++ b/local.yml
@@ -14,3 +14,7 @@
       apt:
         name: code
         state: latest
+    - name: install chrome
+      apt:
+        name: google-chrome-stable
+        state: latest
