--- a/local.yml
+++ b/local.yml
@@ -53,4 +53,4 @@
         state: present
     - name: symlink dotfiles with stow
       become_user: fredrik
-      command: stow ./config
+      shell: stow config
