chore: Update local.yml to keep zshrc during oh-my-zsh installation

--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -7,3 +7,6 @@
 	rebase = true
 [rerere]
 	enabled = true
+[credential "https://github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
