changed to my github

--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = FredrikMWold
-	email = fredrik.wold@bouvet.no
+	name = Kodehodekatty
+	email = kathrine@bluemint.dev
 [core]
 	editor = code --wait
 [pull]
