--- a/config/.config/Code/User/settings.json
+++ b/config/.config/Code/User/settings.json
@@ -5,7 +5,7 @@
   "editor.fontLigatures": true,
   "editor.fontFamily": "'Fira Code'",
   "terminal.integrated.fontFamily": "MesloLGS NF",
-  "prettier.configPath": ".prettierrc",
+  "prettier.configPath": "prettier.config.js",
   "editor.codeActionsOnSave": {
   "source.organizeImports": "explicit"
 },
